<b>Version 2.0.0 Beta 3:</b><br/><br/>
    &#8226; Fixed sharing from the timeline<br/>
    &#8226; Memory management enhancements<br/>
    &#8226; Fixed leaky cursors and receivers<br/>
    &#8226; Hopefully fixed the timelines sometimes just not updating<br/>
    &#8226; Small style change on the tweet viewer<br/>
    &#8226; Some swipe to dismiss interactions list update<br/>
</br><br/>

<b>Version 2.0.0 Beta 2:</b><br/><br/>
    &#8226; Fixed themes being reset<br/>
    &#8226; Only show custom background on main timelines or it gets distorted<br/>
    &#8226; Force closes<br/>
    &#8226; Audio stopping when viewing web page from tweet viewer<br/>
    &#8226; Smaller search icon on the search pages<br/>
    &#8226; Weird action bar icons on some drawer pages<br/>
    &#8226; Improved startup speed and efficiency<br/>
    &#8226; Match international characters when highlighting hashtags<br/>
    &#8226; Share links correctly from the timeline<br/>
    &#8226; Improved click area of button on tweet viewer<br/>
</br><br/>

<b>Version 2.0.0 Beta 1:</b><br/><br/>
<b>NEW:</b><br/>
    &#8226; Talon Pull will automatically shut down to preserve battery when no data connection is active, then restart and check your timeline for missed tweets when data becomes available again.<br/>
    &#8226; Compose button can now float over the main timelines instead of being in the action bar<br/>
    &#8226; New Discover tab in the drawer for trends, suggested users, and nearby tweets<br/>
    &#8226; Pictures page on a users profile<br/>
    &#8226; Animations for opening new pages and windows<br/>
    &#8226; Post tweets from different accounts in the compose window<br/>
    &#8226; Notifications button in the action bar for Talon Pull interations<br/>
    &#8226; Unread "bar" widget<br/>
    &#8226; Seperated the DashClock settings from the notification settings<br/>
    &#8226; Widget themed differently<br/>
    &#8226; Two new transparent widget themes<br/>